Now showing if artist is on tour.

--- a/concertsite/blog/templates/blog/index.html
+++ b/concertsite/blog/templates/blog/index.html
@@ -15,12 +15,14 @@
       </div>
     </form>
 </div>
+
 <h1>{{ artist_name }}</h1>
 <p>
   Artist information
 </p>
 <ul>
-  <li>Songkick ID: {{ artist_site }}</li>
+  <li>Songkick URL: {{ artist_site }}</li>
+  <li>On Tour: {{ tour }}</li>
 </ul>
 
 
