--- a/concertsite/blog/templates/blog/layout.html
+++ b/concertsite/blog/templates/blog/layout.html
@@ -48,23 +48,10 @@
         <div class="container">
           <h1 class="masthead-heading mb-0">Your One Stop To Find Concerts In Your Area!</h1>
           <h2 class="masthead-subheading mb-0">Search for your artist below!</h2>
-          
+          <br>
 
           
-            <div class="col-md-10 col-lg-8 col-xl-7 mx-auto" method="POST">
-              <br>
-              {% csrf_token %}
-              <form>
-                <div class="form-row">
-                  <div class="col-12 col-md-9 mb-2 mb-md-0">
-                    <input type="text" class="form-control form-control-lg rounded-pill" placeholder="Enter artist name...">
-                  </div>
-                  <div class="col-12 col-md-3">
-                    <button type="submit" class="btn btn-block btn-lg btn-primary rounded-pill">Search</button>
-                  </div>
-                </div>
-              </form>
-            </div>
+            {% block search %}{% endblock search%}
 
         </div>
       </div>
